--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^1.0.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4"
   },
